<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:rowCount="4"
    android:columnCount="2"
    tools:context=".ConnectionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_port" />
    <EditText android:id="@+id/local_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/local_port" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_ip" />
    <EditText android:id="@+id/remote_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/remote_ip" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remote_port" />
    <EditText android:id="@+id/remote_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/remote_port" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_connect"
        android:onClick="connect" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_offline"
        android:onClick="offline" />

</GridLayout>
